ArgoCD-Sesac-Application/Application/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
  selector:
    app: backend
